--- a/src/app/components/copymode/subcomponents/header/header.component.scss
+++ b/src/app/components/copymode/subcomponents/header/header.component.scss
@@ -90,3 +90,20 @@
   margin-right: 5px;
   color: $sidebar-color2-dark;
 }
+
+// -webkit-scrollbar
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #eee;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c7c7c7;
+  border-radius: 10px;
+}
