--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -14,7 +14,10 @@
       </i>
 
       <i class="fas fa-key icon key-icon float-right" (click)="switchKey()"
-        [ngClass]="{'selected': header.isKey, 'unselected': !header.isKey, 'grey': !header.isKey}" *ngIf="!keysFull || header.isKey"></i>
+        [ngClass]="{'selected': header.isKey,
+          'unselected': !header.isKey,
+          'grey': !header.isKey,
+          'hover-appear': !header.isKey}" *ngIf="!keysFull || header.isKey"></i>
     </span>
 
     <section *ngIf="previewOpen" class="preview-container col-sm-12">
