--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -1,6 +1,6 @@
 <article class="col">
   <div class="content-box white-border row">
-    
+
     <span class="col-sm-12">
       <span class="header selectable" (click)="onHeaderClick()">
         {{ header.name }}
@@ -24,7 +24,8 @@
     <section *ngIf="previewOpen" class="preview-container col-sm-12">
       <div class="preview-scroller-container">
         <div class="preview-cell-container">
-          <section *ngFor="let cell of header.cells" class="content-box white-border">
+          <section *ngFor="let cell of header.cells" class="content-box white-border" tooltip="{{ cell.value }}"
+          [options]="ttOptions" show-delay="300" hide-delay="10">
 
             <span>
               <span *ngIf="isPrimary && rowMap">
