--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -16,14 +16,19 @@
   </section>
 
   <section class="row" *ngIf="currentWorkbooks.length">
-    <div class="row col-sm-5" *ngFor="let workbook of currentWorkbooks">
+    <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
+      <app-workbook-view [workbook]="workbook" class="col-12">
+      </app-workbook-view>
+    </div>
+
+    <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
         <div id="encompass">
           <!-- Action Bar -->
           <article class="col">
             <div class="row" id="actionbar-container">
               <span id="actionbar">
-                <span class="actionbar-item actionbar-text" [ngClass]="{'inactive': header===activeTextfield}">
+                <span class="actionbar-item actionbar-text">
                   {{ workbook.filename.split('.')[0] }}
                 </span>
                 <i class="fas fa-trash-alt actionbar-item actionbar-icon"
@@ -51,11 +56,11 @@
             *ngIf="copyToHeader.length && copyFromHeader.length && keyPairs['copy'].getWhichKeyFileIn(workbook.filename) == 1"
             (click)="copyColumns()">
               <div class="col justify-content-center">
-                  <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].secondaryFile }}</span>
-                  <span class="text-purple row no-gutters justify-content-center">{{ copyFromHeader.split(":")[1] }}</span>
-                  <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
-                  <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].primaryFile }}</span>
-                  <span class="text-purple row no-gutters justify-content-center">{{ copyToHeader.split(":")[1] }}?</span>
+                <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].secondaryFile }}</span>
+                <span class="text-purple row no-gutters justify-content-center">{{ copyFromHeader.split(":")[1] }}</span>
+                <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
+                <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].primaryFile }}</span>
+                <span class="text-purple row no-gutters justify-content-center">{{ copyToHeader.split(":")[1] }}?</span>
               </div>
             </div>
           </article>
@@ -85,6 +90,7 @@
         </div>
       </div>
     </div>
+
   </section>
 
 </main>
