--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -1,69 +1,57 @@
-<!--
-<section class="row" *ngIf="currentWorkbooks.length">
-  <div class="row col-sm-5" *ngFor="let workbook of currentWorkbooks">
-    <div class="col">
-      <div id="encompass">
-         Action Bar
-        <article class="col">
-          <div class="row" id="actionbar-container">
-            <span id="actionbar">
-              <span class="actionbar-item actionbar-text" [ngClass]="{'inactive': header===activeTextfield}">
-                {{ workbook.filename.split('.')[0] }}
-              </span>
-              <i class="fas fa-trash-alt actionbar-item actionbar-icon"
-                *ngIf="checkIfRowMap() && keyPairs['copy'].getWhichKeyFileIn(workbook.filename)" (click)="clearRowMap()">
-              </i>
-              <i class="fas fa-times actionbar-item actionbar-icon" (click)="closeFile(workbook.filename)"></i>
-              <span class="actionbar-text"> {{ keyPairs['copy'].getKeyTypeText(workbook.filename) }}</span>
-            </span>
-          </div>
-          <div class="row search-container">
-            <input class="search-field form-control" [(ngModel)]="searchText"
-            name="searchText" placeholder="Header Search" [ngClass]="{'active': header===activeTextfield}" (click)="headerSearchbarClicked()">
-          </div>
-        </article>
+<div class="col">
+  <div id="encompass">
 
-       Content
-        <article class="col">
-          <div class="content-box purple-border selectable row justify-content-center"
-          *ngIf="editCount >= 1 && keyPairs['copy'].primaryFile == workbook.filename" (click)="saveFile(workbook)">
-            Save
-          </div>
-        </article>
-        <article class="col">
-          <div class="content-box purple-border selectable row justify-content-center"
-          *ngIf="copyToHeader.length && copyFromHeader.length && keyPairs['copy'].getWhichKeyFileIn(workbook.filename) == 1" (click)="copyColumns()">
-            <b>Copy <span class="text-underline">{{ keyPairs['copy'].secondaryFile }}</span> column
-              <span class="text-purple">{{ copyFromHeader.split(":")[1] }}</span> to
-              <span class="text-underline">{{ keyPairs['copy'].primaryFile }}</span> column
-              <span class="text-purple">{{ copyToHeader.split(":")[1] }}?</span></b>
-          </div>
-        </article>
+    <article class="col">
+      <section class="row" id="actionbar-container">
+        <span id="actionbar">
+          <span class="actionbar-item actionbar-text">
+            {{ workbook.filename.split('.')[0] }}
+          </span>
+          <i class="fas fa-trash-alt actionbar-item actionbar-icon"></i>
+          <i class="fas fa-times actionbar-item actionbar-icon"></i>
+          <span class="actionbar-text">   </span>
+        </span>
+      </section>
+      <section class="row search-container">
+        <input class="search-field form-control" name="searchText" placeholder="Header Search">
+      </section>
+    </article>
 
-        <article class="scroll-container">
-          <div class="scrollbox">
-            <div *ngFor="let header of workbook.headers">
-
-               HEADERS
-              <app-header-box
-                [header]="createHeader(header, workbook.filename, workbook)"
-                [keysFull]="keyPairs['copy'].doBothKeysExist()"
-                [isPrimary]="keyPairs['copy'].getWhichKeyFileIn(workbook.filename) === 1"
-                [rowMap]="rowMap.hasOwnProperty(header) ? rowMap[header] : undefined"
-                [diffMap]="diffMap.hasOwnProperty(header) ? diffMap[header] : undefined"
-                [previewOpen]=" columnPreviews[workbook.filename]===header"
-                (selectKey)="keyPairs['copy'].setKey(workbook.filename, header)"
-                (selectDiff)="diffButtonClicked(workbook.filename, header)"
-                (selectCopy)="checkMarkClicked(workbook.filename, header)"
-                (selectHeader)="headerClicked(workbook.filename, header)">
-              </app-header-box>
-
-            </div>
-          </div>
-        </article>
-
+    <article class="col" *ngIf="0">
+      <div class="content-box purple-border selectable row justify-content-center">
+        Save
       </div>
-    </div>
+    </article>
+
+    <article class="col" *ngIf="0">
+      <div class="content-box purple-border selectable row justify-content-center">
+        <div class="col justify-content-center">
+          <span class="text-underline row no-gutters justify-content-center"> H </span>
+          <span class="text-purple row no-gutters justify-content-center"> H </span>
+          <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
+          <span class="text-underline row no-gutters justify-content-center"> H </span>
+          <span class="text-purple row no-gutters justify-content-center"> H </span>
+        </div>
+      </div>
+    </article>
+
+    <article class="scroll-container">
+      <div class="scrollbox">
+        <div *ngFor="let header of workbook.headers">
+
+          <!-- HEADERS -->
+          <app-header-box
+            [header]="header"
+            [keysFull]="false"
+            [isPrimary]="true"
+            [rowMap]="undefined"
+            [diffMap]="undefined"
+            [previewOpen]="false">
+          </app-header-box>
+
+        </div>
+      </div>
+    </article>
+
   </div>
-</section>
--->
+</div>
