--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -16,13 +16,7 @@
   </section>
 
   <section class="row" *ngIf="currentWorkbooks.length">
-    <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
-      <app-workbook-view
-        [workbook]="workbook"
-        [keyPair]="keyPairs['copy']"
-        class="col-12">
-      </app-workbook-view>
-    </div>
+    
 
     <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
@@ -35,10 +29,10 @@
                   {{ workbook.filename.split('.')[0] }}
                 </span>
                 <i class="fas fa-trash-alt actionbar-item actionbar-icon"
-                  *ngIf="checkIfRowMap() && keyPairs['copy'].getWhichKeyFileIn(workbook.filename)" (click)="clearRowMap()">
+                  *ngIf="checkIfRowMap() && store.keyPair.getWhichKeyFileIn(workbook.filename)" (click)="clearRowMap()">
                 </i>
                 <i class="fas fa-times actionbar-item actionbar-icon" (click)="closeFile(workbook.filename)"></i>
-                <span class="actionbar-text"> {{ keyPairs['copy'].getKeyTypeText(workbook.filename) }}</span>
+                <span class="actionbar-text"> {{ store.keyPair.getKeyTypeText(workbook.filename) }}</span>
               </span>
             </div>
             <div class="row search-container">
@@ -50,19 +44,19 @@
           <!-- Content -->
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
-            *ngIf="editCount >= 1 && keyPairs['copy'].primaryFile == workbook.filename" (click)="saveFile(workbook)">
+            *ngIf="editCount >= 1 && store.keyPair.primaryFile == workbook.filename" (click)="saveFile(workbook)">
               Save
             </div>
           </article>
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
-            *ngIf="copyToHeader.length && copyFromHeader.length && keyPairs['copy'].getWhichKeyFileIn(workbook.filename) == 1"
+            *ngIf="copyToHeader.length && copyFromHeader.length && store.keyPair.getWhichKeyFileIn(workbook.filename) == 1"
             (click)="copyColumns()">
               <div class="col justify-content-center">
-                <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].secondaryFile }}</span>
+                <span class="text-underline row no-gutters justify-content-center">{{ store.keyPair.secondaryFile }}</span>
                 <span class="text-purple row no-gutters justify-content-center">{{ copyFromHeader.split(":")[1] }}</span>
                 <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
-                <span class="text-underline row no-gutters justify-content-center">{{ keyPairs['copy'].primaryFile }}</span>
+                <span class="text-underline row no-gutters justify-content-center">{{ store.keyPair.primaryFile }}</span>
                 <span class="text-purple row no-gutters justify-content-center">{{ copyToHeader.split(":")[1] }}?</span>
               </div>
             </div>
@@ -75,12 +69,12 @@
                 <!-- HEADERS -->
                 <app-header-box
                   [header]="createHeader(header, workbook.filename, workbook)"
-                  [keysFull]="keyPairs['copy'].doBothKeysExist()"
-                  [isPrimary]="keyPairs['copy'].getWhichKeyFileIn(workbook.filename) === 1"
+                  [keysFull]="store.keyPair.doBothKeysExist()"
+                  [isPrimary]="store.keyPair.getWhichKeyFileIn(workbook.filename) === 1"
                   [rowMap]="rowMap.hasOwnProperty(header) ? rowMap[header] : undefined"
                   [diffMap]="diffMap.hasOwnProperty(header) ? diffMap[header] : undefined"
                   [previewOpen]=" columnPreviews[workbook.filename]===header"
-                  (selectKey)="keyPairs['copy'].setKey(workbook.filename, header)"
+                  (selectKey)="store.keyPair.setKey(workbook.filename, header)"
                   (selectDiff)="diffButtonClicked(workbook.filename, header)"
                   (selectCopy)="checkMarkClicked(workbook.filename, header)"
                   (selectHeader)="headerClicked(workbook.filename, header)">
