--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -16,7 +16,7 @@
   </section>
 
   <section class="row" *ngIf="currentWorkbooks.length">
-    
+
 
     <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
@@ -50,14 +50,14 @@
           </article>
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
-            *ngIf="copyToHeader.length && copyFromHeader.length && store.keyPair.getWhichKeyFileIn(workbook.filename) == 1"
+            *ngIf="store.copyToHeader.length && store.copyFromHeader.length && store.keyPair.getWhichKeyFileIn(workbook.filename) == 1"
             (click)="copyColumns()">
               <div class="col justify-content-center">
                 <span class="text-underline row no-gutters justify-content-center">{{ store.keyPair.secondaryFile }}</span>
-                <span class="text-purple row no-gutters justify-content-center">{{ copyFromHeader.split(":")[1] }}</span>
+                <span class="text-purple row no-gutters justify-content-center">{{ store.copyFromHeader.split(":")[1] }}</span>
                 <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
                 <span class="text-underline row no-gutters justify-content-center">{{ store.keyPair.primaryFile }}</span>
-                <span class="text-purple row no-gutters justify-content-center">{{ copyToHeader.split(":")[1] }}?</span>
+                <span class="text-purple row no-gutters justify-content-center">{{ store.copyToHeader.split(":")[1] }}?</span>
               </div>
             </div>
           </article>
@@ -72,7 +72,7 @@
                   [keysFull]="store.keyPair.doBothKeysExist()"
                   [isPrimary]="store.keyPair.getWhichKeyFileIn(workbook.filename) === 1"
                   [rowMap]="rowMap.hasOwnProperty(header) ? rowMap[header] : undefined"
-                  [diffMap]="diffMap.hasOwnProperty(header) ? diffMap[header] : undefined"
+                  [diffMap]="store.diffMap.hasOwnProperty(header) ? store.diffMap[header] : undefined"
                   [previewOpen]=" columnPreviews[workbook.filename]===header"
                   (selectKey)="store.keyPair.setKey(workbook.filename, header)"
                   (selectDiff)="diffButtonClicked(workbook.filename, header)"
