--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,13 +2,18 @@
 <!-- Sidebar  -->
 <nav id="sidebar"  [ngClass]="{'active': navbarActive}">
     <div class="sidebar-header">
-      <i class="fas fa-arrow-left" id="left-arrow" (click)="toggleNavbarClicked()"></i>
-        <span>
-          <h3>ExCelery</h3>
-          <i class="fas fa-arrow-right" id="right-arrow" (click)="toggleNavbarClicked()"></i>
-        </span>
+      <i class="fas fa-arrow-left" id="left-arrow" (click)="toggleNavbarClicked()"
+        data-toggle="collapse" data-target="#wbSubmenu" *ngIf="!navbarActive && !filesCollapsed">
+      </i>
+      <i class="fas fa-arrow-left" id="left-arrow" (click)="toggleNavbarClicked()"
+        *ngIf="!navbarActive && filesCollapsed">
+      </i>
+      <span>
+        <h3>ExCelery</h3>
+        <i class="fas fa-arrow-right" id="right-arrow" (click)="toggleNavbarClicked()"></i>
+      </span>
 
-        <strong>EC</strong>
+      <strong>EC</strong>
     </div>
 
     <ul class="list-unstyled components">
