--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -16,7 +16,12 @@
   </section>
 
   <section class="row" *ngIf="currentWorkbooks.length">
-
+    <div *ngFor="let workbook of currentWorkbooks" class="row col-xl-5 col-sm-6">
+      <app-workbook-view class="col-12"
+        [workbook]="workbook"
+        [keyPair]="store.keyPair">
+      </app-workbook-view>
+    </div>
 
     <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
