Another bug fix

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -16,12 +16,13 @@
   </section>
 
   <section class="row" *ngIf="currentWorkbooks.length">
+    <!--
     <div *ngFor="let workbook of currentWorkbooks" class="row col-xl-5 col-sm-6">
       <app-workbook-view class="col-12"
         [workbook]="workbook"
         [keyPair]="store.keyPair">
       </app-workbook-view>
-    </div>
+    </div> -->
 
     <div class="row col-xl-5 col-sm-6" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
@@ -76,8 +77,6 @@
                   [header]="createHeader(header, workbook.filename, workbook)"
                   [keysFull]="store.keyPair.doBothKeysExist()"
                   [isPrimary]="store.keyPair.getWhichKeyFileIn(workbook.filename) === 1"
-                  [rowMap]="rowMap.hasOwnProperty(header) ? rowMap[header] : undefined"
-                  [diffMap]="store.diffMap.hasOwnProperty(header) ? store.diffMap[header] : undefined"
                   [previewOpen]=" columnPreviews[workbook.filename]===header"
                   (selectKey)="store.keyPair.setKey(workbook.filename, header)"
                   (selectDiff)="diffButtonClicked(workbook.filename, header)"
