--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -8,8 +8,8 @@
             {{ workbook.filename.split('.')[0] }}
           </span>
           <i class="fas fa-trash-alt actionbar-item actionbar-icon"></i>
-          <i class="fas fa-times actionbar-item actionbar-icon"></i>
-          <span class="actionbar-text"> {{ keyPair.getKeyTypeText(workbook.filename)}}  </span>
+          <i class="fas fa-times actionbar-item actionbar-icon" (click)="closeButtonClicked()"></i>
+          <span class="actionbar-text"> {{ store.keyPair.getKeyTypeText(workbook.filename)}}  </span>
         </span>
       </section>
       <section class="row search-container">
