--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -20,7 +20,11 @@
     <div *ngFor="let workbook of store.currentWorkbooks" class="row col-xl-5 col-sm-6">
       <app-workbook-view class="col-12"
         [workbook]="workbook"
-        (close)="closeFile($event)">
+        (close)="closeFile($event)"
+        (save)="saveFile($event)"
+        (selectDiff)="diffButtonClicked(workbook.filename, $event)"
+        (selectCopy)="checkMarkClicked(workbook.filename, $event)"
+        (selectHeader)="headerClicked(workbook.filename, $event)">
       </app-workbook-view>
     </div>
 
@@ -35,9 +39,9 @@
                   {{ workbook.filename.split('.')[0] }}
                 </span>
                 <i class="fas fa-trash-alt actionbar-item actionbar-icon"
-                  *ngIf="store.checkIfRowMap() && store.keyPair.getWhichKeyFileIn(workbook.filename)" (click)="clearRowMap()">
+                  *ngIf="store.checkIfRowMap() && store.keyPair.getWhichKeyFileIn(workbook.filename)" (click)="store.clearRowMap()">
                 </i>
-                <i class="fas fa-times actionbar-item actionbar-icon" (click)="closeFile(workbook.filename)"></i>
+                <i class="fas fa-times actionbar-item actionbar-icon" (click)="store.closeFile(workbook.filename)"></i>
                 <span class="actionbar-text"> {{ store.keyPair.getKeyTypeText(workbook.filename) }}</span>
               </span>
             </div>
@@ -54,6 +58,7 @@
               Save
             </div>
           </article>
+
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
             *ngIf="store.copyToHeader.length && store.copyFromHeader.length && store.keyPair.getWhichKeyFileIn(workbook.filename) == 1"
@@ -77,11 +82,8 @@
                   [header]="createHeader(header, workbook.filename, workbook)"
                   [keysFull]="store.keyPair.doBothKeysExist()"
                   [isPrimary]="store.keyPair.getWhichKeyFileIn(workbook.filename) === 1"
-                  [previewOpen]=" columnPreviews[workbook.filename]===header"
-                  (selectKey)="store.keyPair.setKey(workbook.filename, header)"
-                  (selectDiff)="diffButtonClicked(workbook.filename, header)"
-                  (selectCopy)="checkMarkClicked(workbook.filename, header)"
-                  (selectHeader)="headerClicked(workbook.filename, header)">
+                  [previewOpen]=" store.columnPreviews[workbook.filename]===header"
+                  (selectKey)="store.keyPair.setKey(workbook.filename, header)">
                 </app-header-box>
 
               </div>
