Moved more methods out of main component

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -24,7 +24,7 @@
         (save)="saveFile($event)"
         (copy)="copyColumns()"
         (selectDiff)="diffButtonClicked(workbook.filename, $event)"
-        (selectCopy)="store.checkMarkClicked(workbook.filename, $event)"
+        (selectCopy)="checkMarkClicked(workbook.filename, $event)"
         (selectHeader)="headerClicked(workbook.filename, $event)">
       </app-workbook-view>
     </div>
