--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -15,10 +15,7 @@
         </span>
       </section>
       <section class="row search-container">
-        <input class="search-field form-control"
-          name="searchText"
-          placeholder="Header Search"
-          [(ngModel)]="searchText">
+        <input class="search-field form-control" name="searchText" placeholder="Header Search" [(ngModel)]="searchText">
       </section>
     </article>
 
